--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==3.1.5
 django-bootstrap4==2.3.1
 django-heroku==0.3.1
 django-registration==2.4.1
+django-utils-six==2.0
 djangorestframework==3.12.2
 gunicorn==20.0.4
 importlib-metadata==2.1.1
@@ -17,4 +18,3 @@ six==1.15.0
 soupsieve==2.1
 sqlparse==0.4.1
 whitenoise==5.2.0
-
